--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,11 +92,13 @@
 
     <string name="transaksi">Transaksi</string>
     <string name="transaksi_terkini">Transaksi Terkini</string>
+    <string name="jadwal_transportasi">Jadwal Transportasi</string>
     <string name="jadwal_kapal">Daftar Jadwal</string>
     <string name="data_kapal">Info Transportasi</string>
     <string name="history_transaksi">Riwayat Transaksi</string>
     <string name="hubungi_kami">Hubungi Kami</string>
     <string name="logout">Logout</string>
+    <string name="cari_jadwal_admin">Cari</string>
     <string name="batal">Batal</string>
     <string name="batalkan">Batalkan</string>
     <string name="upload_transaksi">Upload Bukti Pembayaran</string>
@@ -111,7 +113,8 @@
     <string name="kirim_review">Kirim Review !</string>
     <string name="hapus_review">Hapus Review</string>
     <string name="verifikasi_title">Verifikasi</string>
-    <string name="verifikasi_Button">Verifikasi !</string>
+    <string name="verifikasi_Button">Verifikasi</string>
+    <string name="verifikasi_batal">Batal</string>
     <string name="verifikasi_nama">Nama Pemegang Tiket : </string>
     <string name="verifikasi_kode_tiket">Kode Tiket : </string>
     <string name="verifikasi_status">Status Tiket : </string>
@@ -146,4 +149,30 @@
         <item>Penumpang</item>
         <item>Kendaraan</item>
     </string-array>
+
+    <string name="scanner_activity">ZXing Scanner - Full Activity</string>
+    <string name="scanner_fragment_activity">ZXing Scanner - Full Fragment Activity</string>
+    <string name="simple_scanner_activity">ZXing Scanner - Simple Activity</string>
+    <string name="custom_view_finder_scanner_activity">ZXing Scanner - Custom View Finder Activity</string>
+    <string name="scaling_scanner_activity">ZXing Scanner - Scaling Activity</string>
+    <string name="simple_scanner_fragment_activity">ZXing Scanner - Simple Fragment Activity</string>
+    <string name="full_screen_scanner_fragment_activity">ZXing Scanner - Full Screen Fragment Activity</string>
+    <string name="simple_activity_sample">Simple Activity Sample</string>
+    <string name="simple_fragment_sample">Simple Fragment Sample</string>
+    <string name="activity_sample">Full Activity Sample</string>
+    <string name="fragment_sample">Full Fragment Sample</string>
+    <string name="full_screen_sample">Full Screen Fragment Sample</string>
+    <string name="custom_view_finder_sample">Custom View Finder Sample</string>
+    <string name="scaling_sample">Scaling Sample</string>
+    <string name="toggle_flash">Flash</string>
+    <string name="flash_on">Flash [ON]</string>
+    <string name="flash_off">Flash [OFF]</string>
+    <string name="auto_focus_on">Auto Focus [ON]</string>
+    <string name="auto_focus_off">Auto Focus [OFF]</string>
+    <string name="formats">Formats</string>
+    <string name="choose_formats">Choose Formats</string>
+    <string name="select_camera">Select a Camera</string>
+    <string name="ok_button">OK</string>
+    <string name="cancel_button">Cancel</string>
+    <bool name="cameraPreviewShouldFillView">true</bool>
 </resources>
